Added files after finishing the week.

--- a/week_3/lecture_2.ipynb
+++ b/week_3/lecture_2.ipynb
@@ -247,6 +247,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "\n",
+    "    \n",
+    "    def __init__(self, car_type):\n",
+    "        if not isinstance(car_type, str):\n",
+    "            raise TypeError\n",
+    "        else:\n",
+    "            self._car_type = car_type\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "car_list = []\n",
+    "try:\n",
+    "    c = Car(1)\n",
+    "except TypeError:\n",
+    "    print('111')\n",
+    "else:\n",
+    "    car_list.append(c)\n",
+    "\n",
+    "print(car_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
